--- a/README.html
+++ b/README.html
@@ -118,11 +118,11 @@ h5 {
     box-shadow:0 5px 15px #000;     
 }
 </style><body><h1>前端开发流程以及文件组织</h1>
-<blockquote>
-<p>作者: WuNing</p>
-<p>日期: 2013-10-09</p>
-</blockquote>
-<h2>1.自动化流程</h2>
+<ul>
+<li>作者: WuNing</li>
+<li>日期: 2013-10-09</li>
+</ul>
+<h2>1.工具简介</h2>
 <p>主要使用工具:<a href="http://gruntjs.com/" title="GruntJs">GruntJs</a></p>
 <p><em>一个任务运行框架，框架已经提供多种前端开发使用插件工具，例如使用的<a href="http://jslinterrors.com/" title="JSlint">JsLint</a>,<a href="https://github.com/gruntjs/grunt-contrib-concat" title="concat">concat</a>,<a href="https://github.com/gruntjs/grunt-contrib-uglify" title="uglify">uglify</a>,<a href="https://npmjs.org/package/grunt-contrib-cssmin" title="cssmin">cssmin</a></em></p>
 <p>运行环境:<a href="http://nodejs.org/" title="NodeJs">node</a></p>
@@ -132,8 +132,72 @@ h5 {
 <li>相关文件合并</li>
 <li>压缩输出js</li>
 </ul>
-<h2>2.开发流程</h2>
-<p><strong>中间的一个code</strong>和其它的<code>*cookie*</code>其它的<em>例如强调</em></p>
+<h2>2.目录结构</h2>
+<p>主要的3个文件</p>
+<blockquote>
+<p>Gruntfile.js</p>
+</blockquote>
+<p>执行文件，所有的功能在此文件中实现，与此相关的是<code>helper.js</code>，包含一些简单工具函数的模块</p>
+<blockquote>
+<p>branches.json</p>
+</blockquote>
+<p>分支路径说明文件，大致内容如下,属性为项目名称,对应值为绝对路径</p>
+<pre><code>{
+    "dld_ysh" : "D:/WN/svn/branch_ysh/",
+    "dld_bug" : "D:/WN/svn/branch_bug/",
+    "dld_turnk" : "D:/WN/svn/Turnk_dld/",
+    "supermarket" : "D:/WN/svn/branch_supermarket/",
+    "node" : "D:/WN/node/build"
+    }
+</code></pre>
+<blockquote>
+<p>taskJs.json</p>
+</blockquote>
+<p>主要描述文件,用于描述前端所有的js文件以及其关系,数据格式如下，
+<em>注:为了方便描述，在下列代码中打了注释，但是<code>json</code>格式文件实际上并不允许有注释出现</em></p>
+<pre><code>{   
+    //便于记忆和描述的主项目名
+    "dld" : {
+        //子功能名称，例如子页名字叫meishi
+        "meishi":{
+
+            //描述型属性，这是个关键字，同时其下子属性也是关键字
+
+            "description" : {
+
+                //此功能包含依赖的js文件
+
+                "required" : ["#lib.mDLD#","#lib.MKPtool#" , "#lib.jQuery#"],
+
+                //用到这些文件的基本分支
+
+                "base" :["dld_ysh" , "dld_bug"]
+                },
+
+            //相对于每个基本分支的路径
+
+            "static/js/test/Index.js":["#mDLD#","sea.js","jQuery.js","library.js","dialog.js","goble.js"]
+        }，  
+        //子功能名称
+        "testIndex" : {
+             "description" : {
+                "base" : [ "node" ] , 
+                "required" : [ "#jQuery#" ]
+                } ,
+            "/_MKP.js":["src/intro.js","src/MKP_base.js","src/MKP.pager.js","src/outro.js"]
+            },
+        //子功能名称
+        "Index" : { 
+            "description" : {
+                "required" : ["#lib.mDLD#","#lib.MKPtool#" , "#lib.jQuery#"],
+                "base" :["dld_ysh" , "dld_bug"]
+                },
+                "static/js/test/Index.js":["src/index.js"]
+            }
+
+    }
+}
+</code></pre>
 <blockquote>
 <p>这是一个引用</p>
 </blockquote>
