--- a/README.html
+++ b/README.html
@@ -122,6 +122,17 @@ h5 {
 <li>作者: WuNing</li>
 <li>日期: 2013-10-09</li>
 </ul>
+<h3>概述</h3>
+<p>为了方便管理和部署前端文件，需要对现有开发方式做出一些改变。</p>
+<p>现阶段前端开发有诸多问题，例如，php将大部分文件拆散，以便代码复用，同时又采用按需加载js的方式，导致开发人员对单个页面没有一个整体的认识。经常会出现为了重复使用一个功能块，反复加载同一个js文件。这种方式前端文件管理非常杂乱，比较失控。</p>
+<p>另外应减少直接在页面上的硬编码，这样不利于代码重用，当次文件被拆分时，之后利用此类型文件会有不可预估的bug产生,影响开发效率。</p>
+<p>为了改善，我想到的一个简单快捷的方式，用一个结构描述文件来描述前端所有文件之间关系，然后通过这个结构描述文件，让前端文件能自动化完成这样一个部署流程</p>
+<ol>
+<li>代码检测</li>
+<li>文件合并</li>
+<li>压缩文件</li>
+</ol>
+<p>有了结构描述文件之后，对后续开发也有较大的帮助，可以非常方便的了解整个项目中的前端文件结构，可以有效降低项目熟悉的时间成本，对新人比较友善。同时可以有效减少冗余代码，优化代码质量。方便沟通。</p>
 <h2>1.工具简介</h2>
 <p>主要使用工具:<a href="http://gruntjs.com/" title="GruntJs">GruntJs</a></p>
 <p><em>一个任务运行框架，框架已经提供多种前端开发使用插件工具，例如使用的<a href="http://jslinterrors.com/" title="JSlint">JsLint</a>,<a href="https://github.com/gruntjs/grunt-contrib-concat" title="concat">concat</a>,<a href="https://github.com/gruntjs/grunt-contrib-uglify" title="uglify">uglify</a>,<a href="https://npmjs.org/package/grunt-contrib-cssmin" title="cssmin">cssmin</a></em></p>
@@ -165,7 +176,7 @@ h5 {
 
             "description" : {
 
-                //此功能包含依赖的js文件
+                //此功能包含依赖的js文件，(这个属性尚未使用到，暂时可有可无)
 
                 "required" : ["#lib.mDLD#","#lib.MKPtool#" , "#lib.jQuery#"],
 
@@ -197,29 +208,4 @@ h5 {
 
     }
 }
-</code></pre>
-<blockquote>
-<p>这是一个引用</p>
-</blockquote>
-<pre><code>jQuery.each( jQuery.expr.match.bool.source.match( /\w+/g ), function( i, name ) {
-    var getter = jQuery.expr.attrHandle[ name ] || jQuery.find.attr;
-
-    jQuery.expr.attrHandle[ name ] = function( elem, name, isXML ) {
-        var fn = jQuery.expr.attrHandle[ name ],
-            ret = isXML ?
-                undefined :
-                /* jshint eqeqeq: false */
-                // Temporarily disable this handler to check existence
-                (jQuery.expr.attrHandle[ name ] = undefined) !=
-                    getter( elem, name, isXML ) ?
-
-                    name.toLowerCase() :
-                    null;
-
-        // Restore handler
-        jQuery.expr.attrHandle[ name ] = fn;
-
-        return ret;
-    };
-});
 </code></pre></body></html>
