--- a/README.html
+++ b/README.html
@@ -117,7 +117,7 @@ h5 {
     -moz-box-shadow:0 5px 15px #000;
     box-shadow:0 5px 15px #000;     
 }
-</style><body><h1>前端部署工具</h1>
+</style><body><h1>前端部署框架</h1>
 <ul>
 <li>作者: WuNing</li>
 <li>日期: 2013-10-09</li>
@@ -143,7 +143,7 @@ h5 {
 <p>运行环境:<a href="http://nodejs.org/" title="NodeJs">node</a></p>
 <h3>基本流程</h3>
 <ul>
-<li>js语法检测,用于规范和优化js的代码书写，采用与Jquery开发几乎相同的书写规范。我测试过jQuery的所有分支文件，均能通过测试。</li>
+<li>js语法检测,用于规范和优化js的代码书写，采用与Jquery开发几乎相同的书写规范。</li>
 <li>相关文件合并</li>
 <li>压缩输出js</li>
 </ul>
@@ -174,7 +174,7 @@ h5 {
     //便于记忆和描述的主项目名
     "dld" : {
         //子功能名称，例如子页名字叫meishi
-        "meishi":{
+        "ysh_index_index":{
 
             //描述型属性，这是个关键字，同时其下子属性也是关键字
 
@@ -190,8 +190,8 @@ h5 {
                 },
 
             //相对于每个基本分支的路径
-
-            "static/js/test/Index.js":["#mDLD#","sea.js","jQuery.js","library.js","dialog.js","goble.js"]
+            //origin表示源文件路径与结果路径相同
+            "static/js/ysh/Index.js" : "#origin#"
         }，  
         //子功能名称
         "testIndex" : {
@@ -207,7 +207,7 @@ h5 {
                 "required" : ["#lib.mDLD#","#lib.MKPtool#" , "#lib.jQuery#"],
                 "base" :["dld_ysh" , "dld_bug"]
                 },
-                "static/js/test/Index.js":["src/index.js"]
+                "static/js/test/Index.js":"#origin#"
             }
 
     }
